adding module and main files in hr service
