# hr/hrpb/api.pb.gw.go
@@ -269,7 +269,7 @@ func local_request_HrService_UnsuspendEmployee_0(ctx context.Context, marshaler 
 
 }
 
-func request_HrService_GetEmployeeById_0(ctx context.Context, marshaler runtime.Marshaler, client HrServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_HrService_GetEmployee_0(ctx context.Context, marshaler runtime.Marshaler, client HrServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq GetEmployeeRequest
 	var metadata runtime.ServerMetadata
 
@@ -290,12 +290,12 @@ func request_HrService_GetEmployeeById_0(ctx context.Context, marshaler runtime.
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
-	msg, err := client.GetEmployeeById(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GetEmployee(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_HrService_GetEmployeeById_0(ctx context.Context, marshaler runtime.Marshaler, server HrServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_HrService_GetEmployee_0(ctx context.Context, marshaler runtime.Marshaler, server HrServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq GetEmployeeRequest
 	var metadata runtime.ServerMetadata
 
@@ -316,7 +316,7 @@ func local_request_HrService_GetEmployeeById_0(ctx context.Context, marshaler ru
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
 	}
 
-	msg, err := server.GetEmployeeById(ctx, &protoReq)
+	msg, err := server.GetEmployee(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -427,7 +427,7 @@ func RegisterHrServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 
 	})
 
-	mux.Handle("GET", pattern_HrService_GetEmployeeById_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_HrService_GetEmployee_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
@@ -435,12 +435,12 @@ func RegisterHrServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/hrpb.HrService/GetEmployeeById", runtime.WithHTTPPathPattern("/api/hr/{id}"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/hrpb.HrService/GetEmployee", runtime.WithHTTPPathPattern("/api/hr/{id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_HrService_GetEmployeeById_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_HrService_GetEmployee_0(annotatedContext, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
@@ -448,7 +448,7 @@ func RegisterHrServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 			return
 		}
 
-		forward_HrService_GetEmployeeById_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_HrService_GetEmployee_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -581,25 +581,25 @@ func RegisterHrServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 
 	})
 
-	mux.Handle("GET", pattern_HrService_GetEmployeeById_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_HrService_GetEmployee_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/hrpb.HrService/GetEmployeeById", runtime.WithHTTPPathPattern("/api/hr/{id}"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/hrpb.HrService/GetEmployee", runtime.WithHTTPPathPattern("/api/hr/{id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_HrService_GetEmployeeById_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_HrService_GetEmployee_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_HrService_GetEmployeeById_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_HrService_GetEmployee_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -615,7 +615,7 @@ var (
 
 	pattern_HrService_UnsuspendEmployee_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "hr", "id", "unsuspend"}, ""))
 
-	pattern_HrService_GetEmployeeById_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "hr", "id"}, ""))
+	pattern_HrService_GetEmployee_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "hr", "id"}, ""))
 )
 
 var (
@@ -627,5 +627,5 @@ var (
 
 	forward_HrService_UnsuspendEmployee_0 = runtime.ForwardResponseMessage
 
-	forward_HrService_GetEmployeeById_0 = runtime.ForwardResponseMessage
+	forward_HrService_GetEmployee_0 = runtime.ForwardResponseMessage
 )
